fix mobile overflow account modal

--- a/src/components/account/account.css
+++ b/src/components/account/account.css
@@ -1,6 +1,5 @@
 .account-container {
     color: var(--site-background-color);
-    height: 70vh;
     overflow: auto;
 }
 
